# titan-base

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 20260424_0001_initial_setup.py
app/: main.py
app/core/: cache.py  config.py  database.py
app/core/middleware/: logging.py
app/services/platform/: router.py
app/services/platform/endpoints/: health.py
app/services/platform/schemas/: health.py
app/workers/: client.py  tasks.py  worker.py
docker/: Dockerfile  entrypoint.sh
nginx/: nginx.conf
nginx/conf.d/: titan-prod.conf  titan.conf
